--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>Edit your profile</h1>
+<p>Use this form...</p>
+
+<%= form_for @user, url:{action: "create"} do |f|  %>
+
+<%= f.label :first_name %>
+<%= f.text_field :first_name %>
+
+<%= f.label :last_name %>
+<%= f.text_field :last_name %>
+
+<%= f.label :current_city %>
+<%= f.text_field :current_city %>
+
+<%= f.submit "Update User" %>
+
+<% end %>
