--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign up!</h1>
+<p>Use this form...</p>
+<%= form_for @user, url:{action: "create"} do |f|  %>
+
+<%= f.label :first_name %>
+<%= f.text_field :first_name %>
+
+<%= f.label :last_name %>
+<%= f.text_field :last_name %>
+
+<%= f.label :email %>
+<%= f.text_field :email %>
+
+<%= f.label :current_city %>
+<%= f.text_field :current_city %>
+
+<%= f.label :password %>
+<%= f.text_field :password %>
+
+<%= f.label :photo %>
+<%= f.text_field :photo %>
+
+<%= f.submit "Create User" %>
+
+<% end %>
