--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit your profile</h1>
 <p>Use this form...</p>
 
-<%= form_for @user, url:{action: "create"} do |f|  %>
+<%= form_for @user, url: update_user_path do |f|  %>
 
 <%= f.label :first_name %>
 <%= f.text_field :first_name %>
