--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Hi <%= @user.full_name %></h1>
 <p>Find me in app/views/users/show.html.erb</p>
+<%= link_to "Edit", profile_edit_path %>
+<%= link_to "Delete", delete_user_path, method: :delete %>
