--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<a href="/">Travel Blog</a>
+<% if current_user  %>
+	<a href="/logout">Logout</a>
+	<a href="/profile">My Profile</a>
+<% else %>
+	<a href="/login">Login</a>
+	<a href="/signup">Sign Up</a>
+<% end %>
+
+
 
 <%= yield %>
-
 </body>
 </html>
