--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	<a href="/">Travel Blog</a>
 <% if current_user  %>
 	<a href="/logout">Logout</a>
-	<a href="/profile">My Profile</a>
+	<a href="/vagabonds/:id">My Profile</a>
 <% else %>
 	<a href="/login">Login</a>
 	<a href="/signup">Sign Up</a>
