--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,4 @@
 <p>Find me in app/views/posts/show.html.erb</p>
 
  <%= link_to "Edit", edit_post_path %>
- 
+<%= link_to 'Destroy',  @post,  method: :delete, data: { confirm: 'Are you sure?' } %>
