--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
 <%= f.text_field :title %>
 
 <%= f.label :body %>
-<%= f.text_field :body %>
+<%= f.text_area :body %>
 
 <%= f.label :city_id %>
 <%= f.text_field :city_id %>
