--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Title: <%= @post.title %></h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<p><%= @post.body %></p>
+
 
  <%= link_to "Edit", edit_post_path %>
 <%= link_to 'Destroy',  @post,  method: :delete, data: { confirm: 'Are you sure?' } %>
