Initial cities show page complete

--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,8 +1,9 @@
-<h1>All cities</h1>
-<p>Find me in app/views/cities/index.html.erb</p>
+<div class="container">	
+	<h1>All cities</h1>
 
-<% @all_cities.each do |city| %>
-	<%= city.name %>
-	<%= city.latitude %>
-	<%= city.longitude %>
-<% end %>
+	<% @all_cities.each do |city| %>
+		<%= city.name %>
+		<%= city.latitude %>
+		<%= city.longitude %>
+	<% end %>
+</div>
