new post putton on city page

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -5,12 +5,10 @@
 <div class="container">	
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">
-			<h1><%= @city.name %></h1>
-
-			<p>Latitude: <%= @city.latitude %> & Longitude: <%= @city.longitude %></p>
+			<h1><%= @city.name %> <%= link_to "Add New Post", new_post_path(@city.id), class:"btn-sm btn-default pull-right" %></h1>
+			<p>Latitude: <%= @city.latitude %> & Longitude: <%= @city.longitude %> </p>
 			<br>
 			<% @city.posts.each do |post| %>
-
 				<div class="panel panel-default">
 				  <div class="panel-body">
 				    <h4><%= post.title %></h4>
