--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user  %>
-        <li><a href="/logout" class="btn btn-default">Logout</a></li>
+        <li><a href="/logout">Logout</a></li>
         <li><a href="/vagabonds/<%= "#{session[:user_id]}" %>">My Profile</a></li>
         <% else %>
         <li><a href="/login">Login</a></li>
