--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">	
-		<h1>Hi <%= @user.full_name %> </h1>
-			<p><%= @user.current_city %></p> 
+		<h1>Hi, <%= @user.full_name %></h1>
+			<strong><p><%= @user.current_city %></p></strong> 
 			<p> You have been a member since: <%= @user.created_at %></p>
-			<%= link_to "Edit", edit_user_path, class:"btn btn-default" %>
-			<%= link_to "Delete", delete_user_path, method: :delete, class:"btn btn-default" %>
+			<%= link_to "Edit", edit_user_path, class:"btn-sm btn-default" %>
+			<%= link_to "Delete", delete_user_path, method: :delete, class:"btn-sm btn-default" %>
 		<br>
 		<br>
 		</div>	
