styled city jumbotron

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,16 @@
+body {
+  background-color:white;
+}
+.jumbotron{
+  background-size:cover;
+  background-repeat: no-repeat;
+  color:white;
+  margin-top: 0;
+}
+.navbar {
+  margin-bottom:0; 
+}
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
