--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,21 @@
-<h1>Welcome to TravelBlog</h1>
+<div class="jumbotron homepage" style="background-image:url(https://files.slack.com/files-pri/T0351JZQ0-F090X4ULD/smallerbanner.jpg)" style="image-width:100%">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-10 col-sm-offset-1">
+				<h1>Welcome to Vagabond</h1>
+				<p>Have you ever wanted an easy way to share travel tips? Look no further... Vagabond is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to the tips of your fingers. Get started by making a profile or check out a city.<br>Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin
+				©2015</p>
+				<br>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-8 col-sm-offset-2">
+			<iframe width='100%' height='400px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/zoejf.n5dahcjj/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoiem9lamYiLCJhIjoiYzZkYzk3YTg0NjlhMWMzN2YxMzE3MjRlYjdhYTY2NTcifQ.4o17DQScL_qZlKTOYSXrXQ'></iframe>
+		</div>
+	</div>
+</div>
 
-<p>Have you ever wanted an easy way to share travel tips? Look no further... Travel blog is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to the tips of your fingers.<br>Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin
-©2015</p>
+
