--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
 				<h1>Welcome to Vagabond</h1>
-				<p>Have you ever wanted an easy way to share travel tips? Look no further... Vagabond is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to the tips of your fingers. Get started by making a profile or check out a city.<br>Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin
+				<p>Have you ever wanted an easy way to share travel tips? Look no further... Vagabond is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to your fingertips. Get started by making a profile or check out a city.<br><br>Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin
 				©2015</p>
 				<br>
 			</div>
