--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cities<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Gibraltar</a></li>
-            <li><a href="#">London</a></li>
+            <li><a href="/cities/3">Gibraltar</a></li>
+            <li><a href="/cities/2">London</a></li>
             <li><a href="/cities/1">San Francisco</a></li>
           </ul>
         </li>
