added imgur banner

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron homepage" style="background-image:url(https://files.slack.com/files-pri/T0351JZQ0-F090X4ULD/smallerbanner.jpg)" style="image-width:100%">
+<div class="jumbotron homepage">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
