--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,26 @@
-<h1>Edit your profile</h1>
-<p>Use this form...</p>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-6 col-sm-offset-3">
 
-<%= form_for @user, url: update_user_path  do |f|  %>
+			<center>
+				<h1>Edit your profile!</h1>
+			</center>
 
-<%= f.label :first_name %>
-<%= f.text_field :first_name %>
+			<%= form_for @user, url: update_user_path, class: "form-group"  do |f|  %>
 
-<%= f.label :last_name %>
-<%= f.text_field :last_name %>
+			<%= f.label :first_name %>
+			<%= f.text_field :first_name, placeholder: "First Name", class: "form-control", :required => true, :autofocus => true %><br>
 
-<%= f.label :current_city %>
-<%= f.text_field :current_city %>
+			<%= f.label :last_name %>
+			<%= f.text_field :last_name, placeholder: "Last Name", class: "form-control", :required => true %><br>
 
-<%= f.submit "Update User" %>
+			<%= f.label :current_city %>
+			<%= f.text_field :current_city, placeholder: "Current City", class: "form-control", :required => true %><br>
 
-<% end %>
+			<center>
+				<%= f.submit "Update User", class: "btn btn-primary" %>
+			</center>
+			<% end %>
+		</div>
+	</div>
+</div>
