--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,17 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">	
-		<h1>Hi, <%= @user.full_name %></h1>
-			<strong><p><%= @user.current_city %></p></strong> 
-			<p> You have been a member since: <%= @user.created_at %></p>
-			<%= link_to "Edit", edit_user_path, class:"btn-sm btn-default" %>
-			<%= link_to "Delete", delete_user_path, method: :delete, class:"btn-sm btn-default" %>
-		<br>
-		<br>
+			<center>
+				<h1>Hi, <%= @user.full_name %></h1>
+					<strong><p>Current City: <%= @user.current_city %></p></strong> 
+					<p> You have been a member since: <%= @user.created_at %></p>
+					<% if current_user[:id].to_s == params[:id] %> 
+						<%= link_to "Edit", edit_user_path, class:"btn-sm btn-default" %>
+						<%= link_to "Delete", delete_user_path, method: :delete, class:"btn-sm btn-default" %>
+					<% end %>
+				<br>
+				<br>
+			</center>
 		</div>	
 	</div>
 	<div class="row">
