--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-			<iframe width='100%' height='400px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/zoejf.n5dahcjj/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoiem9lamYiLCJhIjoiYzZkYzk3YTg0NjlhMWMzN2YxMzE3MjRlYjdhYTY2NTcifQ.4o17DQScL_qZlKTOYSXrXQ'></iframe>
+			<div id="map">
+
+			</div>
 		</div>
 	</div>
 </div>
