--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">
 
-			<% @city.posts.each do |post| %>
+			<% @city.posts.reverse.each do |post| %>
 				<div class="panel panel-default">
 				  <div class="panel-body">
 				    <h4><%= post.title %></h4>
