part 2 of sprint 3 completed

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,6 +22,9 @@
 				<%= f.submit "Submit Post", class: "btn btn-primary" %>
 			</center>
 			<% end %>
+				<% flash.each do |name, msg| -%>
+					<%= content_tag :div, msg, class: name %>
+				<% end -%>
 		</div>
 	</div>
 </div>
