--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,7 @@
 
 			<center>
 				<%= f.submit "Update User", class: "btn btn-primary" %>
+				<%= @error %>
 			</center>
 			<% end %>
 		</div>
