--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,6 +29,9 @@
 			</center>
 
 			<% end %>
+			<% flash.each do |name, msg| -%>
+				<%= content_tag :div, msg, class: name %>
+			<% end -%>
 
 		</div>
 	</div>
