--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,8 +3,7 @@
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
 				<h1>Welcome to Vagabond</h1>
-				<p>Have you ever wanted an easy way to share travel tips? Look no further... Vagabond is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to your fingertips. Get started by making a profile or check out a city.<br><br>Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin
-				©2015</p>
+				<p>Have you ever wanted an easy way to share travel tips? Look no further... Vagabond is a fully-featured, robust, cloud-based web app that brings the sage wisdom of worldly travelers to your fingertips. Get started by making a profile or check out a city.<br><br></p>
 				<br>
 			</div>
 		</div>
@@ -19,5 +18,13 @@
 		</div>
 	</div>
 </div>
+<footer>
+<br>
+<br >
+<div style="text-align:center">
+   Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin ©2015 
+</div>
+<br>
+</footer>
 
 
