--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,8 +15,7 @@
 			<%= f.label :body %>
 			<%= f.text_area :body, placeholder: "Your Content Here", class: "form-control", :required => true %><br>
 
-			<%= f.label :city_id %>
-			<%= f.text_field :city_id, placeholder: "City ID", class: "form-control", :required => true %><br>
+			<%= f.text_field :city_id, placeholder: "City ID", class: "form-control", :required => true, type:"hidden" %><br>
 
 			<center>
 				<%= f.submit "Submit Post", class: "btn btn-primary" %>
