--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3">
-			<h1>Title: <%= @post.title %></h1>
-			<p>Content: <%= @post.body %></p>
+			<h1><%= @post.title %></h1>
+			<p><%= @post.body %></p>
 			<% if current_user && current_user[:id] == @post[:user_id] %>
 				<%= link_to "Edit", edit_post_path %>
 				<%= link_to "Delete",  @post,  method: :delete, data: { confirm: 'Are you sure?' } %>
