--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,26 +1,3 @@
-body {
-  background-color: #FEFDFC;
-}
-
-.jumbotron{
-  background-size:cover;
-  background-repeat: no-repeat;
-  color:white;
-  margin-top: 0;
-}
-.homepage {
-  background-image:url("http://i.imgur.com/ix4OvHL.png");
-  max-width: 100%;
-}
-
-.jumbotron.homepage h1 {
-	text-align: center
-}
-
-.navbar {
-  margin-bottom:0; 
-}
-
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -36,5 +13,5 @@ body {
  *= require_tree .
  *= require_self
  */
-@import "bootstrap-sprockets"
-@import "bootstrap"
+@import "bootstrap-sprockets";
+@import "bootstrap";
