--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">	
 			<center>
+				<%= image_tag @user.avatar.url %>
 				<h1>Hi, <%= @user.full_name %></h1>
 					<strong><p>Current City: <%= @user.current_city %></p></strong> 
 					<p> You have been a member since: <%= @user.created_at %></p>
