--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -4,6 +4,22 @@ body {
 /*  font-family: 'Roboto', sans-serif;*/
 }
 
+.holds-map {
+  height:500px;
+}
+#map {
+  height: 500px;
+  position:absolute;
+  width:100%;
+  display:block;
+}
+
+footer {
+  position:relative;
+  bottom:0;
+  width: 100%;
+}
+
 h1 {
   font-family: 'Fredericka the Great', cursive;
 }
@@ -18,6 +34,7 @@ h3 {
 
 .tagline {
   font-size: 200% !important;
+  text-align: center;
 }
 
 .jumbotron{
@@ -26,6 +43,7 @@ h3 {
 
   color:white;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .homepage {
@@ -39,7 +57,6 @@ h3 {
 
 .navbar {
   margin-bottom:0; 
-
 }
 
 .navbar-brand {
