--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,33 +1,56 @@
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.4/Leaflet.fullscreen.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.4/leaflet.fullscreen.css' rel='stylesheet' />
+
 <div class="jumbotron homepage">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
 				<br>
+				<br>
 				<h1>Welcome to Vagabond</h1>
 				<br>
-				<br>
-				<p class="tagline">Connecting world travelers and their stories.<br><br><br></p>
+				<p class="tagline">Connecting world travelers and their stories.<br><br></p>
 				<br>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="container">
-	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
-			<div id="map">
-				<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/zoejf.n5dahcjj/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoiem9lamYiLCJhIjoiYzZkYzk3YTg0NjlhMWMzN2YxMzE3MjRlYjdhYTY2NTcifQ.4o17DQScL_qZlKTOYSXrXQ'></iframe>
-			</div>
-		</div>
+<div class="holds-map">
+	<div id="map">
+		<!-- 				<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/zoejf.n5dahcjj/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoiem9lamYiLCJhIjoiYzZkYzk3YTg0NjlhMWMzN2YxMzE3MjRlYjdhYTY2NTcifQ.4o17DQScL_qZlKTOYSXrXQ'></iframe> -->
 	</div>
 </div>
+
 <footer>
 <br>
 <br >
-<div style="text-align:center">
-   Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin ©2015 
+<div class="container">
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1">
+			<div style="text-align:center">
+			   Created by Tim Festa, Zoe Foss, Monika Chumber, and Ian Civgin ©2015 
+			</div>
+			<br>
+		</div>
+	</div>
 </div>
-<br>
 </footer>
+
+<script>
+	L.mapbox.accessToken = 'pk.eyJ1Ijoiem9lamYiLCJhIjoiYzZkYzk3YTg0NjlhMWMzN2YxMzE3MjRlYjdhYTY2NTcifQ.4o17DQScL_qZlKTOYSXrXQ';
+	var map = L.mapbox.map('map', 'zoejf.n5dahcjj', {zoomControl: false})
+	    .setView([39.91, 23.203], 2);
+
+	    // Disable drag and zoom handlers.
+	    map.dragging.disable();
+	    map.touchZoom.disable();
+	    map.doubleClickZoom.disable();
+	    map.scrollWheelZoom.disable();
+
+	    // Disable tap handler, if present.
+	    if (map.tap) map.tap.disable();
+
+	// L.control.fullscreen().addTo(map);
+</script>
 
 
