grey/transparent nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
   <link rel="shortcut icon" href="https://i.imgur.com/eDn15RQ.png" />
 </head>
 <body>
-<nav class="navbar navbar-default">
+
+<nav class="navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -66,7 +67,6 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
 <%= yield %>
 
 </body>
