--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,7 +1,9 @@
 body {
   background-color: #FEFDFC;
+}
 
-/*  font-family: 'Roboto', sans-serif;*/
+.navbar-default {
+    background-color: #8C8F8E; 
 }
 
 .holds-map {
@@ -12,6 +14,9 @@ body {
   position:absolute;
   width:100%;
   display:block;
+}
+.navbar-default .navbar-nav>li>a {
+  color: white;
 }
 
 footer {
@@ -47,8 +52,9 @@ h3 {
 }
 
 .homepage {
-  background-image:url("http://i.imgur.com/ix4OvHL.png");
-  max-width: 100%;
+/*  background-image:url("http://i.imgur.com/ix4OvHL.png");
+  max-width: 100%;*/
+  background-color: #8C8F8E;
 }
 
 .jumbotron.homepage h1 {
