--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,12 +5,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
-				<br>
-				<br>
 				<h1>Welcome to Vagabond</h1>
-				<br>
-				<p class="tagline">Connecting world travelers and their stories.<br><br></p>
-				<br>
+				<p class="tagline">Connecting world travelers and their stories.</p>
 			</div>
 		</div>
 	</div>
