--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,12 +3,12 @@
 	<div class="row">
 		<div class="col-sm-2 col-sm-offset-1">
 			<div class="panel panel-default">
-			  <a href="/vagabonds/<%= @post.user.id %>" >
 				  <div class="panel-body" style="text-align:center">
-				    <h5>Authored by: <%= @post.user.first_name %> </h5><br>
+				    <a href="/vagabonds/<%= @post.user.id %>" >
+				    <h5>Authored by: <%= @post.user.first_name %> </h5></a><br>
 				    <p><%= image_tag @post.user.avatar.url(:thumb) %></p>
-				  </div>
-				</a>  
+				    <p>Location: <br> <a href="/cities/<%= @post.city.id %>"</a> <%= @post.city.name %></p> 
+				  </div> 
 			</div>
 		</div>
 		<div class="col-sm-6 panel panel-default">
