--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,13 @@
             <li><a href="/cities/3">Gibraltar</a></li>
             <li><a href="/cities/2">London</a></li>
             <li><a href="/cities/1">San Francisco</a></li>
+            <li><a href="/cities/4">Mumbai</a></li>
+            <li><a href="/cities/5">Austin</a></li>
+            <li><a href="/cities/6">Prague</a></li>
+            <li><a href="/cities/7">Barcelona</a></li>
+            <li><a href="/cities/8">Rome</a></li>
+            <li><a href="/cities/9">Dubai</a></li>
+            <li><a href="/cities/10">Interlaken</a></li>
           </ul>
         </li>
       </ul>
