--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -76,5 +76,10 @@ h3 {
   padding-left: 5px;
 }
 
-
+.glyphicon-pencil {
+  padding-right: 5px;
+}
+.glyphicon-comment {
+  padding-right: 5px;
+}
 
