fixed merge conflict markup

--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -19,7 +19,7 @@
 				  <div class="panel-body">
 				    <h3><%= post.title %></h3>
 				    <%= link_to "View Post", post_path(post), class:"pull-right" %>
-				    <h5>Authored by: <%= post.user.first_name %></h5><br>
+				    <h5>Authored by: <a href="/vagabonds/<%= post.user.id %>"><%= post.user.first_name %></a></h5><br> 
 				    <p><%= post.body %></p>
 				  </div>
 				</div>
