--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
 			<%= f.text_field :current_city, placeholder: "Current City", class: "form-control", :required => true %><br>
 
 			<%= f.label :password %>
-			<%= f.text_field :password, placeholder: "Password", class: "form-control", :required => true %><br>
+			<%= f.password_field :password, placeholder: "Password", class: "form-control", :required => true %><br>
 
 			<%= f.file_field :avatar %>
 
